--- a/src/psiclient2015.vcxproj.filters
+++ b/src/psiclient2015.vcxproj.filters
@@ -48,7 +48,6 @@
     <ClCompile Include="diagnostic_info.cpp" />
     <ClCompile Include="wininet_network_check.cpp" />
     <ClCompile Include="coretransport.cpp" />
-    <ClCompile Include="settings.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -515,17 +514,15 @@
     <ClInclude Include="diagnostic_info.h" />
     <ClInclude Include="wininet_network_check.h" />
     <ClInclude Include="coretransport.h" />
-    <ClInclude Include="settings.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="psiclient.ico" />
-    <None Include="small.ico" />
     <None Include="3rdParty\polipo.exe" />
     <None Include="3rdParty\psiphon-tunnel-core.exe" />
     <None Include="feedback.html" />
+    <None Include="settings.html" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
@@ -542,12 +539,13 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="bitmap1.bmp" />
-    <Image Include="bitmap2.bmp" />
+    <Image Include="psiclient.ico" />
+    <Image Include="small.ico" />
     <Image Include="settings.bmp" />
     <Image Include="toggle_images.bmp" />
     <Image Include="banner.bmp" />
     <Image Include="email.bmp" />
     <Image Include="feedback.bmp" />
+    <Image Include="settings2.bmp" />
   </ItemGroup>
 </Project>
