--- a/src/psiclient.vcxproj.filters
+++ b/src/psiclient.vcxproj.filters
@@ -519,8 +519,10 @@
     <ResourceCompile Include="psiclient.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="psiclient.ico" />
-    <None Include="small.ico" />
+    <None Include="3rdParty\polipo.exe" />
+    <None Include="3rdParty\psiphon-tunnel-core.exe" />
+    <None Include="feedback.html" />
+    <None Include="settings.html" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
@@ -535,5 +537,14 @@
     <Filter Include="WebCtrl">
       <UniqueIdentifier>{9cab73d3-bc74-49ac-b02d-501929a49dd6}</UniqueIdentifier>
     </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="psiclient.ico" />
+    <Image Include="small.ico" />
+    <Image Include="banner.bmp" />
+    <Image Include="email.bmp" />
+    <Image Include="feedback.bmp" />
+    <Image Include="settings.bmp" />
+    <Image Include="toggle_images.bmp" />
   </ItemGroup>
 </Project>
