--- a/src/psiclient2015.vcxproj.filters
+++ b/src/psiclient2015.vcxproj.filters
@@ -523,6 +523,7 @@
     <None Include="3rdParty\psiphon-tunnel-core.exe" />
     <None Include="feedback.html" />
     <None Include="settings.html" />
+    <None Include="webui\settings.html" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="json">
@@ -546,6 +547,5 @@
     <Image Include="banner.bmp" />
     <Image Include="email.bmp" />
     <Image Include="feedback.bmp" />
-    <Image Include="settings2.bmp" />
   </ItemGroup>
 </Project>
