--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -3,6 +3,8 @@
   "version": "0.0.1",
   "dependencies": {
     "grunt": "^0.4.5",
+    "grunt-contrib-concat": "^0.5.0",
+    "grunt-contrib-less": "^1.0.0",
     "grunt-inline": "^0.3.4"
   }
 }
