--- a/src/psiclient2015.vcxproj.filters
+++ b/src/psiclient2015.vcxproj.filters
@@ -521,19 +521,6 @@
     <ResourceCompile Include="psiclient.rc" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="3rdParty\polipo.exe" />
-    <None Include="3rdParty\psiphon-tunnel-core.exe" />
-    <None Include="feedback.html" />
-    <None Include="settings.html" />
-    <None Include="webui\settings.html" />
-    <None Include="webui\flags16.css" />
-    <None Include="webui\json.js" />
-    <None Include="webui\jquery.js" />
-    <None Include="webui\msdropdown.css" />
-    <None Include="webui\msdropdown.js" />
-    <None Include="webui\main.html" />
-  </ItemGroup>
-  <ItemGroup>
     <Filter Include="json">
       <UniqueIdentifier>{106ceb3c-f752-4f8a-b641-e0707df25db2}</UniqueIdentifier>
     </Filter>
@@ -546,16 +533,14 @@
     <Filter Include="WebCtrl">
       <UniqueIdentifier>{9cab73d3-bc74-49ac-b02d-501929a49dd6}</UniqueIdentifier>
     </Filter>
+    <Filter Include="UI">
+      <UniqueIdentifier>{7d4a24ae-9f52-44b6-8849-5c893ad559b8}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <Image Include="psiclient.ico" />
-    <Image Include="small.ico" />
-    <Image Include="settings.bmp" />
-    <Image Include="toggle_images.bmp" />
-    <Image Include="banner.bmp" />
-    <Image Include="email.bmp" />
-    <Image Include="feedback.bmp" />
-    <Image Include="webui\flags16.png" />
-    <Image Include="webui\flag_unknown_16.png" />
+    <Image Include="webui\flag_unknown_16.png">
+      <Filter>UI</Filter>
+    </Image>
   </ItemGroup>
 </Project>
