--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -1,6 +1,6 @@
 {
   "name": "psiphon-windows-ui",
-  "version": "0.0.1",
+  "private": true,
   "dependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.0",
