Updated stopped icon

--- a/src/psiclient2015.vcxproj
+++ b/src/psiclient2015.vcxproj
@@ -331,6 +331,7 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="psiclient.ico" />
+    <Image Include="systray-stopped.ico" />
     <Image Include="webui\flag_unknown_16.png" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
