--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -5,6 +5,8 @@
     "grunt": "^1.0.1",
     "grunt-contrib-concat": "^1.0.1",
     "grunt-contrib-less": "^1.3.0",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-contrib-connect": "^1.0.2",
     "grunt-execute": "^0.2.2",
     "grunt-inline": "^0.3.6"
   }
