--- a/src/psiclient2015.vcxproj.filters
+++ b/src/psiclient2015.vcxproj.filters
@@ -49,7 +49,8 @@
     <ClCompile Include="3rdParty\jsoncpp\jsoncpp.cpp">
       <Filter>3rdParty\jsoncpp</Filter>
     </ClCompile>
-    <ClCompile Include="psicash.cpp" />
+    <ClCompile Include="psicashlib.cpp" />
+    <ClCompile Include="dispatch_queue.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="config.h" />
@@ -526,7 +527,8 @@
     <ClInclude Include="3rdParty\psicash\psicash.hpp">
       <Filter>3rdParty\psicash</Filter>
     </ClInclude>
-    <ClInclude Include="psicash.h" />
+    <ClInclude Include="psicashlib.h" />
+    <ClInclude Include="dispatch_queue.h" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="psiclient.rc" />
@@ -534,9 +536,6 @@
   <ItemGroup>
     <Filter Include="WebCtrl">
       <UniqueIdentifier>{9cab73d3-bc74-49ac-b02d-501929a49dd6}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="UI">
-      <UniqueIdentifier>{7d4a24ae-9f52-44b6-8849-5c893ad559b8}</UniqueIdentifier>
     </Filter>
     <Filter Include="3rdParty">
       <UniqueIdentifier>{be7fd6a6-10d9-466d-b2a4-1e4f7089e26c}</UniqueIdentifier>
@@ -559,9 +558,6 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="psiclient.ico" />
-    <Image Include="webui\flag_unknown_16.png">
-      <Filter>UI</Filter>
-    </Image>
     <Image Include="systray-stopped.ico" />
   </ItemGroup>
 </Project>
