Use external transifexlib

--- a/i18n/Pipfile
+++ b/i18n/Pipfile
@@ -7,10 +7,7 @@ verify_ssl = true
 pylint = "*"
 
 [packages]
-beautifulsoup4 = "*"
-ruamel-yaml = "*"
-localizable = {git = "https://github.com/chrisballinger/python-localizable.git",ref = "15d3bf2466d0de1a826d3f0ff1f365b0c1910f56"}
-requests = "*"
+transifexlib = {git = "https://github.com/Psiphon-Inc/transifexlib.git"}
 
 [requires]
 python_version = "3.7"
