Revert "Next release (#12)"
This reverts commit de8a5b0912dd4b9cfb74b60c6a9047288762ba0e.

--- a/i18n/Pipfile
+++ b/i18n/Pipfile
@@ -9,3 +9,5 @@ pylint = "*"
 [packages]
 transifexlib = {git = "https://github.com/Psiphon-Inc/transifexlib.git"}
 
+[requires]
+python_version = "3.7"
