prevent upgrade and flag version as legacy on Windows 7, 8, 8.1

--- a/src/psiclient2015.vcxproj.filters
+++ b/src/psiclient2015.vcxproj.filters
@@ -577,4 +577,7 @@
     <Image Include="psiclient.ico" />
     <Image Include="systray-stopped.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Manifest Include="psiphon.manifest" />
+  </ItemGroup>
 </Project>
